--- a/agri.css
+++ b/agri.css
@@ -94,10 +94,11 @@
     flex-direction: row;
     justify-content: space-evenly;
     text-align: center;
-    padding: 40px;
+    padding: 60px;
     margin: 110px;
     box-sizing: border-box;
-    border: 30px dotted;
+    border: 1px solid whitesmoke;
+    box-shadow: -2px 3px 5px;
     
 }
 
@@ -153,4 +154,41 @@
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
+}
+#amount{
+    font-weight: 800;
+    padding: 10px;
+}
+.see{
+    font-size: xx-large;
+    text-align: end;
+    margin: 78px;
+}
+
+
+/* SECTION 5 */
+
+
+.sect5{
+    border-top: 30px solid grey;
+    
+}
+.sect5 h5{
+    font-size: x-large;
+    margin: 10px;
+    text-align: start;
+}
+.esteemed{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    
+
+}
+.esteem{
+    border: 1px solid whitesmoke;
+    box-shadow: -2px 2px 5px;
+    margin: 80px;
+    padding: 40px;
+
 }
