--- a/agri.css
+++ b/agri.css
@@ -24,6 +24,7 @@
 .topnav h1{
     padding: 30px 16px;
     float: left;
+    font-size: 60px;
 }
 
 .button{
@@ -38,7 +39,6 @@
 /* SECTION 1 */
 
 .sect1{
-    display: flex;
     height: 120vh;
     
 }
@@ -47,18 +47,19 @@
     background-size: cover;
     height: 63vw;
     display: flex;
-    /* padding: 40px; */
-    /* margin-top: 30px; */
+    margin-top: 30px;
 }
 
 
 .text{
-    font-size: xxx-large;
+    font-size: 40px;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
-    padding: 20px;
-    margin: 80px;
+    /* justify-content: space-around; */
+    padding: 10px;
+    margin-top: 18%;
+    margin-left: 40px;
+
 }
 
 .image2{
@@ -79,29 +80,26 @@
     text-decoration: none;
     color: white;
     font-weight: 800;
-    margin-right: 65%;
-    margin: 20%;
-} 
-
-/* SECTION 2 */
-
-.sect2{
-    /* background-color: white; */
-    font-size: xx-large;
-    font-weight: 700;
-    /* display: flex; */
+    /* margin-right: 65%;
+    margin: 20%; */
 }
+
+
+
+    
+    
 .goals{
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
     text-align: center;
-    padding: 60px;
-    margin: 110px;
     box-sizing: border-box;
     border: 1px solid whitesmoke;
     box-shadow: -2px 3px 5px;
-    
+    background-color: white;
+    font-size: xx-large;
+    font-weight: 700; 
+    padding: 40px;
 }
 
 /* SECTION3 */
@@ -255,12 +253,29 @@
     flex-direction: column;
     margin: 40px;
     padding: 30px;
+    width: 40vw;
+    font-size: x-large;
+}
+.icons1 h1{
+    font-size: xx-large;
 }
 .icons2{
     display: flex;
     flex-direction: row;
     margin: 40px;
     padding: 20px;
-    justify-content: space-around;
+}
+.close{
+    text-align: center;
+    padding: 18px;
+    font-size: xx-large;
+}
+.icon{
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
+    padding: 30px;
+    list-style: none;
+    font-size: x-large;
 }
 
