--- a/agri.css
+++ b/agri.css
@@ -260,6 +260,12 @@
 .icons1 h1{
     font-size: xx-large;
 }
+.logos{
+    display: flex;
+    margin: 3px;
+    justify-content: space-around;
+    border-radius: 30px;
+}
 .icons2{
     display: flex;
     flex-direction: row;
