--- a/agri.css
+++ b/agri.css
@@ -176,7 +176,8 @@
 
 
 .sect5{
-    border-top: 30px solid grey;
+    border-top: 30px solid rgb(228, 227, 227);
+    box-shadow: 5px 2px 10px;
     
 }
 .sect5 h5{
@@ -247,6 +248,7 @@
 .bottom{
     border-top: 5px solid white;
     display: flex;
+    
     
 }
 .icons1{
