--- a/agri.css
+++ b/agri.css
@@ -41,6 +41,7 @@
 
 .sect1{
     height: 120vh;
+    margin-bottom: 24%;
     
 }
 .produce{
@@ -54,9 +55,9 @@
 
 .text{
     font-size: 40px;
-    display: flex;
+    /* display: flex; */
     flex-direction: column;
-    /* justify-content: space-around; */
+    justify-content: right;
     padding: 10px;
     margin-top: 18%;
     margin-left: 40px;
@@ -67,11 +68,11 @@
     /* float: center;
     display: flex; */
     margin-right: 3%;
-    margin-top: 20%;
+    margin-top: 20%; 
+}
 
-    
-    
-  
+.explore{
+    margin-top: 100px;
 }
 .button1{
     background-color: rgb(214, 89, 31);
@@ -81,8 +82,8 @@
     text-decoration: none;
     color: white;
     font-weight: 800;
-    /* margin-right: 65%;
-    margin: 20%; */
+    margin-right: 65%;
+    /* margin: 20%;  */ 
 }
 
 
@@ -91,7 +92,6 @@
     
 .goals{
     display: flex;
-    flex-direction: row;
     justify-content: space-evenly;
     text-align: center;
     box-sizing: border-box;
@@ -100,7 +100,9 @@
     background-color: white;
     font-size: xx-large;
     font-weight: 700; 
-    padding: 40px;
+    padding: 100px;
+    margin-left: 150px;
+    margin-right: 150px;
 }
 
 /* SECTION3 */
