--- a/agri.css
+++ b/agri.css
@@ -82,8 +82,7 @@
     text-decoration: none;
     color: white;
     font-weight: 800;
-    margin-right: 65%;
-    /* margin: 20%;  */ 
+    margin-right: 65%; 
 }
 
 
@@ -151,8 +150,7 @@
 
 .float1{
     display: flex;
-    /* flex-direction: row; */
-    /* justify-content: space-around; */
+    
 
 }
 .products{
@@ -160,7 +158,6 @@
 }
 .float2{
     display: flex;
-    /* flex-direction: row; */
     justify-content: space-around;
 }
 #amount{
@@ -171,6 +168,7 @@
     font-size: xx-large;
     text-align: end;
     margin: 78px;
+    /* text-decoration-line: underline solid orange; */
 }
 
 
@@ -178,14 +176,14 @@
 
 
 .sect5{
-    border-top: 30px solid rgb(228, 227, 227);
-    box-shadow: 5px 2px 10px;
+    border-top: 24px solid rgb(219, 218, 218);
     
 }
 .sect5 h5{
     font-size: x-large;
     margin: 30px;
     text-align: start;
+    /* text-decoration-line: underline solid orange; */
 }
 .esteemed{
     display: flex;
@@ -197,6 +195,13 @@
     box-shadow: -2px 2px 5px;
     margin: 90px;
     padding: 30px;
+}
+#name{
+    font-weight: 700;
+    display: flex;
+    justify-content: center;
+    
+
 }
 .check{
     color: orange;
@@ -279,25 +284,30 @@
 }
 .app{
     font-size: x-large;
-    margin: 40px;
+    margin: 20px;
 }
 .icons2{
     display: flex;
     flex-direction: row;
-    margin: 40px;
-    padding: 20px;
+    margin: 10px;
+    padding: 10px;
 }
+
 .close{
     text-align: center;
     padding: 18px;
     font-size: xx-large;
 }
+#list{
+    padding: 30px;
+    margin: 10px;
+}
+    
 .icon{
     display: flex;
-    justify-content: space-between;
     flex-direction: column;
-    padding: 30px;
-    list-style: none;
+    padding: 10px;
+    list-style-type: none;
     font-size: x-large;
 }
 
